; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/smc/extr_if_smc.c_smc_enable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/smc/extr_if_smc.c_smc_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smc_softc = type { i32, %struct.ifnet* }
%struct.ifnet = type { i32 }

@RPCR = common dso_local global i32 0, align 4
@RPCR_ANEG = common dso_local global i32 0, align 4
@RPCR_LED_LINK_ANY = common dso_local global i32 0, align 4
@RPCR_LSA_SHIFT = common dso_local global i32 0, align 4
@RPCR_LED_ACT_ANY = common dso_local global i32 0, align 4
@RPCR_LSB_SHIFT = common dso_local global i32 0, align 4
@TCR = common dso_local global i32 0, align 4
@TCR_TXENA = common dso_local global i32 0, align 4
@TCR_PAD_EN = common dso_local global i32 0, align 4
@RCR = common dso_local global i32 0, align 4
@RCR_RXEN = common dso_local global i32 0, align 4
@RCR_STRIP_CRC = common dso_local global i32 0, align 4
@EPH_INT = common dso_local global i32 0, align 4
@RX_OVRN_INT = common dso_local global i32 0, align 4
@RCV_INT = common dso_local global i32 0, align 4
@TX_INT = common dso_local global i32 0, align 4
@IFCAP_POLLING = common dso_local global i32 0, align 4
@MSK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.smc_softc*)* @smc_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smc_enable(%struct.smc_softc* %0) #0 {
  %2 = alloca %struct.smc_softc*, align 8
  %3 = alloca %struct.ifnet*, align 8
  store %struct.smc_softc* %0, %struct.smc_softc** %2, align 8
  %4 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %5 = call i32 @SMC_ASSERT_LOCKED(%struct.smc_softc* %4)
  %6 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %7 = getelementptr inbounds %struct.smc_softc, %struct.smc_softc* %6, i32 0, i32 1
  %8 = load %struct.ifnet*, %struct.ifnet** %7, align 8
  store %struct.ifnet* %8, %struct.ifnet** %3, align 8
  %9 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %10 = call i32 @smc_select_bank(%struct.smc_softc* %9, i32 0)
  %11 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %12 = load i32, i32* @RPCR, align 4
  %13 = load i32, i32* @RPCR_ANEG, align 4
  %14 = load i32, i32* @RPCR_LED_LINK_ANY, align 4
  %15 = load i32, i32* @RPCR_LSA_SHIFT, align 4
  %16 = shl i32 %14, %15
  %17 = or i32 %13, %16
  %18 = load i32, i32* @RPCR_LED_ACT_ANY, align 4
  %19 = load i32, i32* @RPCR_LSB_SHIFT, align 4
  %20 = shl i32 %18, %19
  %21 = or i32 %17, %20
  %22 = call i32 @smc_write_2(%struct.smc_softc* %11, i32 %12, i32 %21)
  %23 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %24 = load i32, i32* @TCR, align 4
  %25 = load i32, i32* @TCR_TXENA, align 4
  %26 = load i32, i32* @TCR_PAD_EN, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @smc_write_2(%struct.smc_softc* %23, i32 %24, i32 %27)
  %29 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %30 = load i32, i32* @RCR, align 4
  %31 = load i32, i32* @RCR_RXEN, align 4
  %32 = load i32, i32* @RCR_STRIP_CRC, align 4
  %33 = or i32 %31, %32
  %34 = call i32 @smc_write_2(%struct.smc_softc* %29, i32 %30, i32 %33)
  %35 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %36 = call i32 @smc_select_bank(%struct.smc_softc* %35, i32 2)
  %37 = load i32, i32* @EPH_INT, align 4
  %38 = load i32, i32* @RX_OVRN_INT, align 4
  %39 = or i32 %37, %38
  %40 = load i32, i32* @RCV_INT, align 4
  %41 = or i32 %39, %40
  %42 = load i32, i32* @TX_INT, align 4
  %43 = or i32 %41, %42
  %44 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %45 = getelementptr inbounds %struct.smc_softc, %struct.smc_softc* %44, i32 0, i32 0
  store i32 %43, i32* %45, align 8
  %46 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %47 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = load i32, i32* @IFCAP_POLLING, align 4
  %50 = and i32 %48, %49
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %59

52:                                               ; preds = %1
  %53 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %54 = load i32, i32* @MSK, align 4
  %55 = load %struct.smc_softc*, %struct.smc_softc** %2, align 8
  %56 = getelementptr inbounds %struct.smc_softc, %struct.smc_softc* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = call i32 @smc_write_1(%struct.smc_softc* %53, i32 %54, i32 %57)
  br label %59

59:                                               ; preds = %52, %1
  ret void
}

declare dso_local i32 @SMC_ASSERT_LOCKED(%struct.smc_softc*) #1

declare dso_local i32 @smc_select_bank(%struct.smc_softc*, i32) #1

declare dso_local i32 @smc_write_2(%struct.smc_softc*, i32, i32) #1

declare dso_local i32 @smc_write_1(%struct.smc_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
